removing $ sign from everywhere